# CUDA-Flash-Attention

./: CMakeLists.txt  README.md  generate_test_data.py  test_flash_attention2.py
include/: dispatcher.h  enum_types.h  error_utils.h  utils.h
kernels/: f-attn.cu  f-attn.cuh  f-attn2-backward.cu  f-attn2-backward_f16.cu  f-attn2.cuh  kernel_fa2_optimized.cu  kernel_fa2_optimized_f16.cu  plain-attn.cu  vanilla-attn.cu  vanilla-attn.cuh
plots/: backward_experiment_results.csv  experiment_results.csv
src/: main.cpp  utils.cpp
